--- a/vercel.json
+++ b/vercel.json
@@ -1,14 +1,3 @@
 {
-  "version": 2,
-  "builds": [
-    {
-      "src": "*",
-      "use": "@vercel/static"
-    }
-  ],
-  "routes": [
-    { "src": "/assets/(.*)", "dest": "/assets/$1" },
-    { "src": "/index_zh.html", "dest": "/index_zh.html" },
-    { "src": "/(.*)", "dest": "/index.html" }
-  ]
+  "gitLfs": true
 }
